converted y n to 1 0 in the cb_person_default_on_file feature.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -765,7 +765,7 @@
    "id": "2fea1626",
    "metadata": {},
    "source": [
-    "#### note: Majority of loans are for education from people who rent. "
+    "#### note: Majority of people are around 27 years old who rent their living spaces and are getting high interest rates for education - most of them did not default on their loans, so there is an imbalance problem."
    ]
   },
   {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "fef70a55",
    "metadata": {},
    "outputs": [
@@ -1200,6 +1200,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "b808ba9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [person_age, person_income, person_home_ownership, person_emp_length, loan_intent, loan_grade, loan_amnt, loan_int_rate, loan_status, loan_percent_income, cb_person_default_on_file, cb_person_cred_hist_length]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset[credit_risk_dataset.person_emp_length > credit_risk_dataset.person_age]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "137d14e1",
    "metadata": {},
@@ -1209,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 120,
    "id": "f3fd6718",
    "metadata": {},
    "outputs": [
@@ -1351,6 +1412,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "61a58293",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list2d = [[1,2,3,4,5], [6,7,8,9,10]]\n",
+    "list2d[1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "id": "d259805c",
    "metadata": {},
@@ -1393,6 +1476,225 @@
    ],
    "source": [
     "credit_risk_dataset.cb_person_default_on_file.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "f5a1f23d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\billy\\AppData\\Local\\Temp\\ipykernel_28116\\3053772205.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  credit_risk_dataset.cb_person_default_on_file.replace(\n"
+     ]
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.cb_person_default_on_file.replace(\n",
+    "    {'Y': 1, 'N': 0},\n",
+    "    inplace=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "ca4c154c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>person_age</th>\n",
+       "      <th>person_income</th>\n",
+       "      <th>person_home_ownership</th>\n",
+       "      <th>person_emp_length</th>\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>loan_grade</th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>loan_int_rate</th>\n",
+       "      <th>loan_status</th>\n",
+       "      <th>loan_percent_income</th>\n",
+       "      <th>cb_person_default_on_file</th>\n",
+       "      <th>cb_person_cred_hist_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>11.14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5500</td>\n",
+       "      <td>12.87</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>23</td>\n",
+       "      <td>65500</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>15.23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24</td>\n",
+       "      <td>54400</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>MEDICAL</td>\n",
+       "      <td>C</td>\n",
+       "      <td>35000</td>\n",
+       "      <td>14.27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>21</td>\n",
+       "      <td>9900</td>\n",
+       "      <td>OWN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>VENTURE</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   person_age  person_income person_home_ownership  person_emp_length  \\\n",
+       "1          21           9600                   OWN                5.0   \n",
+       "2          25           9600              MORTGAGE                1.0   \n",
+       "3          23          65500                  RENT                4.0   \n",
+       "4          24          54400                  RENT                8.0   \n",
+       "5          21           9900                   OWN                2.0   \n",
+       "\n",
+       "  loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
+       "1   EDUCATION          B       1000          11.14            0   \n",
+       "2     MEDICAL          C       5500          12.87            1   \n",
+       "3     MEDICAL          C      35000          15.23            1   \n",
+       "4     MEDICAL          C      35000          14.27            1   \n",
+       "5     VENTURE          A       2500           7.14            1   \n",
+       "\n",
+       "   loan_percent_income  cb_person_default_on_file  cb_person_cred_hist_length  \n",
+       "1                 0.10                          0                           0  \n",
+       "2                 0.57                          0                           0  \n",
+       "3                 0.53                          0                           0  \n",
+       "4                 0.55                          1                           1  \n",
+       "5                 0.25                          0                           0  "
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "01c30b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[32m~\\AppData\\Local\\Temp\\ipykernel_28116\\1705483869.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m result = \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[32m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x == \u001b[33m'Y'\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m result(credit_risk_dataset.cb_person_cred_hist_length)\n",
+      "\u001b[32m~\\AppData\\Local\\Temp\\ipykernel_28116\\1705483869.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m result = \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[32m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x == \u001b[33m'Y'\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[32m0\u001b[39m\n",
+      "\u001b[32mc:\\Users\\billy\\anaconda3\\envs\\credit_risk_modeling\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1578\u001b[39m     @final\n\u001b[32m   1579\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m __nonzero__(self) -> NoReturn:\n\u001b[32m-> \u001b[39m\u001b[32m1580\u001b[39m         raise ValueError(\n\u001b[32m   1581\u001b[39m             \u001b[33mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[39m\n\u001b[32m   1582\u001b[39m             \u001b[33m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[39m\n\u001b[32m   1583\u001b[39m         )\n",
+      "\u001b[31mValueError\u001b[39m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
+   "source": [
+    "result = lambda x: 1 if x == 'Y' else 0\n",
+    "result(credit_risk_dataset.cb_person_cred_hist_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "946c0fab",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2461999777.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[108]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmap(lambda x: return 1 if x == 'Y' else 0, credit_risk_dataset.cb_person_cred_hist_length)\u001b[39m\n                  ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "map(lambda x: return 1 if x == 'Y' else 0, credit_risk_dataset.cb_person_cred_hist_length)"
    ]
   },
   {
