--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1502,155 +1502,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "ca4c154c",
+   "execution_count": 134,
+   "id": "0009eab1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credit_risk_dataset = credit_risk_dataset.astype(\n",
+    "    {\"cb_person_default_on_file\": \"bool\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "38328975",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person_age</th>\n",
-       "      <th>person_income</th>\n",
-       "      <th>person_home_ownership</th>\n",
-       "      <th>person_emp_length</th>\n",
-       "      <th>loan_intent</th>\n",
-       "      <th>loan_grade</th>\n",
-       "      <th>loan_amnt</th>\n",
-       "      <th>loan_int_rate</th>\n",
-       "      <th>loan_status</th>\n",
-       "      <th>loan_percent_income</th>\n",
-       "      <th>cb_person_default_on_file</th>\n",
-       "      <th>cb_person_cred_hist_length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>21</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>OWN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>EDUCATION</td>\n",
-       "      <td>B</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>11.14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>25</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>MEDICAL</td>\n",
-       "      <td>C</td>\n",
-       "      <td>5500</td>\n",
-       "      <td>12.87</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>23</td>\n",
-       "      <td>65500</td>\n",
-       "      <td>RENT</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>MEDICAL</td>\n",
-       "      <td>C</td>\n",
-       "      <td>35000</td>\n",
-       "      <td>15.23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>24</td>\n",
-       "      <td>54400</td>\n",
-       "      <td>RENT</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>MEDICAL</td>\n",
-       "      <td>C</td>\n",
-       "      <td>35000</td>\n",
-       "      <td>14.27</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>21</td>\n",
-       "      <td>9900</td>\n",
-       "      <td>OWN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>VENTURE</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>7.14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   person_age  person_income person_home_ownership  person_emp_length  \\\n",
-       "1          21           9600                   OWN                5.0   \n",
-       "2          25           9600              MORTGAGE                1.0   \n",
-       "3          23          65500                  RENT                4.0   \n",
-       "4          24          54400                  RENT                8.0   \n",
-       "5          21           9900                   OWN                2.0   \n",
-       "\n",
-       "  loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
-       "1   EDUCATION          B       1000          11.14            0   \n",
-       "2     MEDICAL          C       5500          12.87            1   \n",
-       "3     MEDICAL          C      35000          15.23            1   \n",
-       "4     MEDICAL          C      35000          14.27            1   \n",
-       "5     VENTURE          A       2500           7.14            1   \n",
-       "\n",
-       "   loan_percent_income  cb_person_default_on_file  cb_person_cred_hist_length  \n",
-       "1                 0.10                          0                           0  \n",
-       "2                 0.57                          0                           0  \n",
-       "3                 0.53                          0                           0  \n",
-       "4                 0.55                          1                           1  \n",
-       "5                 0.25                          0                           0  "
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 32574 entries, 1 to 32580\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                      Non-Null Count  Dtype   \n",
+      "---  ------                      --------------  -----   \n",
+      " 0   person_age                  32574 non-null  int64   \n",
+      " 1   person_income               32574 non-null  int64   \n",
+      " 2   person_home_ownership       32574 non-null  category\n",
+      " 3   person_emp_length           31679 non-null  float64 \n",
+      " 4   loan_intent                 32574 non-null  category\n",
+      " 5   loan_grade                  32574 non-null  category\n",
+      " 6   loan_amnt                   32574 non-null  int64   \n",
+      " 7   loan_int_rate               29459 non-null  float64 \n",
+      " 8   loan_status                 32574 non-null  int64   \n",
+      " 9   loan_percent_income         32574 non-null  float64 \n",
+      " 10  cb_person_default_on_file   32574 non-null  bool    \n",
+      " 11  cb_person_cred_hist_length  32574 non-null  int64   \n",
+      "dtypes: bool(1), category(3), float64(3), int64(5)\n",
+      "memory usage: 2.4 MB\n"
+     ]
     }
    ],
    "source": [
-    "credit_risk_dataset.head(5)"
+    "credit_risk_dataset.info()"
    ]
   },
   {
