--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1781,12 +1781,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "5ea2ede6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "credit_risk_dataset"
+    "credit_risk_dataset = credit_risk_dataset.astype(\n",
+    "    {\"loan_status\": \"bool\"}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e3fd3d1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 32574 entries, 1 to 32580\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                      Non-Null Count  Dtype   \n",
+      "---  ------                      --------------  -----   \n",
+      " 0   person_age                  32574 non-null  int64   \n",
+      " 1   person_income               32574 non-null  int64   \n",
+      " 2   person_home_ownership       32574 non-null  category\n",
+      " 3   person_emp_length           31679 non-null  float64 \n",
+      " 4   loan_intent                 32574 non-null  category\n",
+      " 5   loan_grade                  32574 non-null  category\n",
+      " 6   loan_amnt                   32574 non-null  int64   \n",
+      " 7   loan_int_rate               29459 non-null  float64 \n",
+      " 8   loan_status                 32574 non-null  bool    \n",
+      " 9   loan_percent_income         32574 non-null  float64 \n",
+      " 10  cb_person_default_on_file   32574 non-null  bool    \n",
+      " 11  cb_person_cred_hist_length  32574 non-null  int64   \n",
+      "dtypes: bool(2), category(3), float64(3), int64(4)\n",
+      "memory usage: 2.1 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "credit_risk_dataset.info()"
    ]
   },
   {
