crosstab analysis of loan status and loan intent.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2652,36 +2652,194 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e7c4120",
+   "id": "bb6a7a6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>DEBTCONSOLIDATION</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>HOMEIMPROVEMENT</th>\n",
+       "      <th>MEDICAL</th>\n",
+       "      <th>PERSONAL</th>\n",
+       "      <th>VENTURE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loan_status</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3722</td>\n",
+       "      <td>5340</td>\n",
+       "      <td>2664</td>\n",
+       "      <td>4450</td>\n",
+       "      <td>4422</td>\n",
+       "      <td>4869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1490</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>941</td>\n",
+       "      <td>1621</td>\n",
+       "      <td>1097</td>\n",
+       "      <td>847</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['person_home_ownership', 'loan_intent', 'loan_grade'], dtype='object')"
+       "loan_intent  DEBTCONSOLIDATION  EDUCATION  HOMEIMPROVEMENT  MEDICAL  PERSONAL  \\\n",
+       "loan_status                                                                     \n",
+       "0                         3722       5340             2664     4450      4422   \n",
+       "1                         1490       1111              941     1621      1097   \n",
+       "\n",
+       "loan_intent  VENTURE  \n",
+       "loan_status           \n",
+       "0               4869  \n",
+       "1                847  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "categorical_features."
+    "pd.crosstab(\n",
+    "  index= target,\n",
+    "  columns=  credit_risk_dataset.loan_intent\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb6a7a6d",
+   "id": "8b6e80e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>loan_intent</th>\n",
+       "      <th>DEBTCONSOLIDATION</th>\n",
+       "      <th>EDUCATION</th>\n",
+       "      <th>HOMEIMPROVEMENT</th>\n",
+       "      <th>MEDICAL</th>\n",
+       "      <th>PERSONAL</th>\n",
+       "      <th>VENTURE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loan_status</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>71588.914293</td>\n",
+       "      <td>67718.332397</td>\n",
+       "      <td>82085.335210</td>\n",
+       "      <td>65422.364494</td>\n",
+       "      <td>71714.860923</td>\n",
+       "      <td>70199.567468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>53686.085906</td>\n",
+       "      <td>46776.364536</td>\n",
+       "      <td>49384.174283</td>\n",
+       "      <td>50497.152375</td>\n",
+       "      <td>46942.396536</td>\n",
+       "      <td>44088.696576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "loan_intent  DEBTCONSOLIDATION     EDUCATION  HOMEIMPROVEMENT       MEDICAL  \\\n",
+       "loan_status                                                                   \n",
+       "0                 71588.914293  67718.332397     82085.335210  65422.364494   \n",
+       "1                 53686.085906  46776.364536     49384.174283  50497.152375   \n",
+       "\n",
+       "loan_intent      PERSONAL       VENTURE  \n",
+       "loan_status                              \n",
+       "0            71714.860923  70199.567468  \n",
+       "1            46942.396536  44088.696576  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.crosstab(\n",
-    "  index= target ,\n",
-    "  columns=  loan_grade\n",
+    "  index= target,\n",
+    "  columns=  credit_risk_datasSet.loan_intent,\n",
+    "  values= credit_risk_dataset.person_income,\n",
+    "  aggfunc= 'mean'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fcc110c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
