created boundaries function to count the observations between two age boundaries.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -3214,159 +3214,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "3c661c50",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>person_age</th>\n",
-       "      <th>person_income</th>\n",
-       "      <th>person_home_ownership</th>\n",
-       "      <th>person_emp_length</th>\n",
-       "      <th>loan_intent</th>\n",
-       "      <th>loan_grade</th>\n",
-       "      <th>loan_amnt</th>\n",
-       "      <th>loan_int_rate</th>\n",
-       "      <th>loan_status</th>\n",
-       "      <th>loan_percent_income</th>\n",
-       "      <th>cb_person_default_on_file</th>\n",
-       "      <th>cb_person_cred_hist_length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>21</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>OWN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>EDUCATION</td>\n",
-       "      <td>B</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>11.14</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>25</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>MORTGAGE</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>MEDICAL</td>\n",
-       "      <td>C</td>\n",
-       "      <td>5500</td>\n",
-       "      <td>12.87</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>False</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>23</td>\n",
-       "      <td>65500</td>\n",
-       "      <td>RENT</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>MEDICAL</td>\n",
-       "      <td>C</td>\n",
-       "      <td>35000</td>\n",
-       "      <td>15.23</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>24</td>\n",
-       "      <td>54400</td>\n",
-       "      <td>RENT</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>MEDICAL</td>\n",
-       "      <td>C</td>\n",
-       "      <td>35000</td>\n",
-       "      <td>14.27</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>21</td>\n",
-       "      <td>9900</td>\n",
-       "      <td>OWN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>VENTURE</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2500</td>\n",
-       "      <td>7.14</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   person_age  person_income person_home_ownership  person_emp_length  \\\n",
-       "1          21           9600                   OWN                5.0   \n",
-       "2          25           9600              MORTGAGE                1.0   \n",
-       "3          23          65500                  RENT                4.0   \n",
-       "4          24          54400                  RENT                8.0   \n",
-       "5          21           9900                   OWN                2.0   \n",
-       "\n",
-       "  loan_intent loan_grade  loan_amnt  loan_int_rate  loan_status  \\\n",
-       "1   EDUCATION          B       1000          11.14        False   \n",
-       "2     MEDICAL          C       5500          12.87         True   \n",
-       "3     MEDICAL          C      35000          15.23         True   \n",
-       "4     MEDICAL          C      35000          14.27         True   \n",
-       "5     VENTURE          A       2500           7.14         True   \n",
-       "\n",
-       "   loan_percent_income  cb_person_default_on_file  cb_person_cred_hist_length  \n",
-       "1                 0.10                      False                           2  \n",
-       "2                 0.57                      False                           3  \n",
-       "3                 0.53                      False                           2  \n",
-       "4                 0.55                       True                           4  \n",
-       "5                 0.25                      False                           2  "
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "credit_risk_dataset.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 95,
    "id": "717765b0",
    "metadata": {},
@@ -3397,9 +3244,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ef3a260",
+   "metadata": {},
+   "source": [
+    "### Boundaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "637bd5fc",
+   "metadata": {},
+   "source": [
+    "#### Age Boundaries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6ab8de3",
+   "id": "9d0c21d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The oldest person is: 94\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The oldest person is:\", credit_risk_dataset['person_age'].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "c235681c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The youngest person is: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The youngest person is:\", credit_risk_dataset['person_age'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "1241a61a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age between 0 and 18: Number of people 0\n",
+      "Age between 18 and 36: Number of people 29661\n",
+      "Age between 36 and 54: Number of people 3307\n",
+      "Age between 54 and 72: Number of people 170\n",
+      "Age between 72 and 90: Number of people 7\n",
+      "Age between 90 and 108: Number of people 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def age_groups(age_boundaries):\n",
+    "    boundaries_length = len(age_boundaries)\n",
+    "    for i in range(0, boundaries_length-1):\n",
+    "       first_boundary = age_boundaries[i]\n",
+    "       num_people = credit_risk_dataset['person_age'].between(first_boundary, age_boundaries[i+1]).sum()\n",
+    "       print(f\"Age between {first_boundary} and {age_boundaries[i+1]}: Number of people {num_people}\")\n",
+    "\n",
+    "age_groups([0, 18, 36, 54, 72, 90, 108])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ec064d6",
    "metadata": {},
    "outputs": [],
    "source": []
