added income and loan amount boundaries.

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -3081,14 +3081,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "87d9893b",
-   "metadata": {},
-   "source": [
-    "### Correlations"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "f103a4d4",
@@ -3326,12 +3318,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "244187bb",
+   "metadata": {},
+   "source": [
+    "### Income Boundaries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ec064d6",
+   "id": "dbae7b76",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def income_groups(income_boundaries):\n",
+    "    boundary_length = len(income_boundaries)\n",
+    "    for i in range(0, boundary_length-1):\n",
+    "        first_boundary = "
+   ]
   }
  ],
  "metadata": {
